--- a/clint/src/index.css
+++ b/clint/src/index.css
@@ -3,6 +3,12 @@
 @tailwind utilities;
 
 .container_bg {
-  width: 1140px;
+  width: 1200px;
   margin: 0 auto;
+}
+
+.banner_bg {
+  background: url("./images/banner-bg.png") no-repeat center / cover;
+  width: 100%;
+  height: 600px;
 }
