--- a/clint/src/assets/main.css
+++ b/clint/src/assets/main.css
@@ -826,6 +826,10 @@ video {
   padding: 6rem;
 }
 
+.p-20 {
+  padding: 5rem;
+}
+
 .py-6 {
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
@@ -866,6 +870,11 @@ video {
   padding-right: 0.75rem;
 }
 
+.px-24 {
+  padding-left: 6rem;
+  padding-right: 6rem;
+}
+
 .pt-16 {
   padding-top: 4rem;
 }
@@ -900,6 +909,14 @@ video {
 
 .pt-4 {
   padding-top: 1rem;
+}
+
+.pb-24 {
+  padding-bottom: 6rem;
+}
+
+.pt-24 {
+  padding-top: 6rem;
 }
 
 .text-center {
