--- a/clint/src/index.css
+++ b/clint/src/index.css
@@ -8,7 +8,7 @@
 }
 
 .banner_bg {
-  background: url("./images/banner-bg.png") no-repeat center / cover;
+  background: url("./assets/images/banner-bg.png") no-repeat center / cover;
   width: 100%;
   height: 600px;
 }
